# volumetric-qc

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: cookbook.md  metrics_reference.md
examples/: allen_brain_demo.ipynb  idr_demo.ipynb  qc_config.yaml  synthetic_artifacts.ipynb
scripts/: generate_dashboard_screenshot.py  generate_demo_dashboard.py
src/volumetric_qc/: __init__.py  cli.py
src/volumetric_qc/io/: __init__.py  chunked.py  readers.py
src/volumetric_qc/metrics/: __init__.py  artifacts.py  background.py  channel_bleed.py  clearing.py  intensity.py  registration.py  sharpness.py
src/volumetric_qc/pipeline/: __init__.py  batch.py  config.py  runner.py
src/volumetric_qc/reports/: __init__.py  html.py  summary.py
src/volumetric_qc/synthetic/: __init__.py  generators.py
tests/: conftest.py  test_io.py  test_metrics.py  test_pipeline.py
