[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "volumetric-qc"
version = "0.1.0"
description = "Quality control and artifact detection for large 3D fluorescence microscopy volumes (SHIELD, iDISCO, CLARITY)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "volumetric-qc contributors" }]
keywords = [
    "microscopy",
    "fluorescence",
    "tissue-clearing",
    "SHIELD",
    "iDISCO",
    "CLARITY",
    "quality-control",
    "OME-Zarr",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "scikit-learn>=1.3",
    "zarr>=2.16",
    "ome-zarr>=0.8",
    "dask[array]>=2024.1",
    "tifffile>=2024.1",
    "nibabel>=5.0",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "typer>=0.9",
    "umap-learn>=0.5",
    "jinja2>=3.1",
]

[project.optional-dependencies]
viewer = ["napari[all]>=0.4"]
aics = ["aicsimageio>=4.11"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
    "kaleido>=0.2",
    "jupyter>=1.0",
    "nbformat>=5.9",
]

[project.scripts]
volumetric-qc = "volumetric_qc.cli:app"

[project.urls]
Homepage = "https://github.com/example/volumetric-qc"
Repository = "https://github.com/example/volumetric-qc"
Documentation = "https://github.com/example/volumetric-qc#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/volumetric_qc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501", "B008", "N806"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/volumetric_qc"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
